dataset1235/2025-2/1153765216/users/1937138466/executions/2747719322_3455942218.log
== SUBMISSION (2025-08-19 02:49:24)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45.0
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$, round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 02:52:23)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
frete = float(input("Valor do frete: "))
# Calculo do valor a ser pago, incluindo o frete:
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$", round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 02:52:13)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
frete = float(input("Valor do frete: "))
# Calculo do valor a ser pago, incluindo o frete:
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$", round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 02:52:12)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
frete = float(input("Valor do frete: "))
# Calculo do valor a ser pago, incluindo o frete:
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$", round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:07:05)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo?: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos?: "))

total = (8 * valor_unitario) + 45
saldo = valor_disponivel - total

print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 02:51:14)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
frete = float(input("Valor do frete: "))
# Calculo do valor a ser pago, incluindo o frete:
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$, round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:00:26)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos: "))
frete = float(input("Qual o valor do frete: "))

total = (8 * valor_unitario) + frete
saldo = valor_disponivel - total

print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 02:51:49)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
frete = float(input("Valor do frete: "))
# Calculo do valor a ser pago, incluindo o frete:
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$, round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 15)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:00:25)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos: "))
frete = float(input("Qual o valor do frete: "))

total = (8 * valor_unitario) + frete
saldo = valor_disponivel - total

print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:00:27)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos: "))
frete = float(input("Qual o valor do frete: "))

total = (8 * valor_unitario) + frete
saldo = valor_disponivel - total

print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 02:50:00)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
frete = 45.0
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$, round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 16
    print("Saldo: R$, round(saldo, 1)
          ^
SyntaxError: unterminated string literal (detected at line 16)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:07:06)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo?: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos?: "))

total = (8 * valor_unitario) + 45
saldo = valor_disponivel - total

print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:00:27)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos: "))
frete = float(input("Qual o valor do frete: "))

total = (8 * valor_unitario) + frete
saldo = valor_disponivel - total

print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 02:52:19)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
frete = float(input("Valor do frete: "))
# Calculo do valor a ser pago, incluindo o frete:
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$", round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:00:26)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos: "))
frete = float(input("Qual o valor do frete: "))

total = (8 * valor_unitario) + frete
saldo = valor_disponivel - total

print(total)
print(saldo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete = float(input("Qual o valor do frete: "))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:07:07)
-- CODE: 
valor_unitario = float(input("Qual o valor unitario de cada jogo?: "))
valor_disponivel = float(input("Qual o valor disponivel para a aquisição dos jogos?: "))

total = (8 * valor_unitario) + 45
saldo = valor_disponivel - total

print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 02:52:20)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_unitario = float(input("Qual o valor unitario do jogo? "))
valor_disponivel = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))
frete = float(input("Valor do frete: "))
# Calculo do valor a ser pago, incluindo o frete:
total_jogos = valor_unitario * 8
total_a_pagar = total_jogos + frete
saldo = valor_disponivel - total_a_pagar

# Impressao do valor total e do saldo:
print("Total a pagar: R$", round(total_a_pagar, 1))
print("Saldo: R$", round(saldo, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 15
    print("Saldo: R$", round(saldo, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
